# wrapper-container

./: README.md  WrapperContainer.h
unittests/: CMakeLists.txt  WrapperContainerTests.cpp  compile.sh  main.cpp
